Fix Dockerfile: use mesh-monitor.py instead of mesh_monitor.py

--- a/docker/monitoring/Dockerfile.collector
+++ b/docker/monitoring/Dockerfile.collector
@@ -22,7 +22,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Copy application files
-COPY mesh_monitor.py .
+COPY mesh-monitor.py .
 COPY notifications.py .
 COPY collector.py .
 
