--- a/docker/monitoring/Dockerfile.collector
+++ b/docker/monitoring/Dockerfile.collector
@@ -9,6 +9,9 @@ RUN apt-get update && apt-get install -y \
     openssh-client \
     iputils-ping \
     snmp \
+    gcc \
+    libffi-dev \
+    python3-dev \
     && rm -rf /var/lib/apt/lists/*
 
 # Create app user
