--- a/docker/dns-docker-compose.yml
+++ b/docker/dns-docker-compose.yml
@@ -22,15 +22,19 @@ services:
 
   # Unbound DNS Cache
   unbound:
-    image: nlnetlabs/unbound:latest
+    image: lscr.io/linuxserver/unbound:latest
     container_name: mesh-unbound
     restart: unless-stopped
     network_mode: host
+    environment:
+      - PUID=1000
+      - PGID=1000
+      - TZ=Etc/UTC
     volumes:
-      - ./configs/unbound/unbound.conf:/opt/unbound/etc/unbound/unbound.conf:ro
-      - unbound-data:/opt/unbound/etc/unbound/var
+      - ./configs/unbound/unbound.conf:/config/unbound/unbound.conf:ro
+      - unbound-data:/config
     healthcheck:
-      test: ["CMD", "unbound-host", "-t", "A", "cloudflare.com", "127.0.0.1"]
+      test: ["CMD", "drill", "@127.0.0.1", "-p", "5353", "cloudflare.com"]
       interval: 30s
       timeout: 5s
       retries: 3
